just add new files

--- a/global.css
+++ b/global.css
@@ -1,8 +1,8 @@
 fieldset {
-	width: 200px;
-	margin: 20% auto;
+	width: 30%;
+	margin: 10% auto;
 }
 p {
-	margin: 10px;
+	margin: 20px;
 	text-align:center;
 }
